exports[`computeCourse adds the course to the dirty set if it matches 1`] = `
Set {
  "ART 130 Research",
}
`;

exports[`computeCourse checks if a course exists in the list of courses 1`] = `
Object {
  "department": Array [
    "ART",
  ],
  "number": 250,
}
`;

exports[`computeCourse does not add the course to the dirty set if it did not match 1`] = `Set {}`;

exports[`computeCourse merges a query and the found course 1`] = `
Object {
  "_extraKeys": Array [
    "crsid",
  ],
  "crsid": 20951,
  "department": Array [
    "ART",
  ],
  "number": 250,
}
`;

exports[`computeCourse returns false if the course is in the dirty set 1`] = `
Object {
  "department": Array [
    "ART",
  ],
  "number": 130,
  "type": "Research",
}
`;
